# nshrunner

./: .dir2textignore  .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: copilot-instructions.md
notebooks/: runnet-test.py
src/nshrunner/: .nshconfig.generated.json  __init__.py  _config.py  _env.py  _logging.py  _picklerunner.py  _runner.py  _seed.py  picklerunner.py  session.py  snapshot.py  submission.py  wrapper_fns.py
src/nshrunner/_src/: types_.py
src/nshrunner/_src/backends/: base.py  session.py
src/nshrunner/_src/picklerunner/: __init__.py  __main__.py  core.py
src/nshrunner/_submit/: _script.py  _util.py  lsf.py  screen.py  slurm.py  unified.py
src/nshrunner/_submit/session/: _output.py  lsf.py  slurm.py  unified.py
src/nshrunner/_util/: code_saving.py  env.py  environment.py  git.py  kv.py  print_environment_info.py  run_info.py  script_detector.py  seed.py  shell_hook.py  signal_handling.py
src/nshrunner/backends/: screen.py  slurm.py
src/nshrunner/config/: __init__.py
src/nshrunner/config/_logging/: __init__.py
src/nshrunner/config/_runner/: __init__.py
src/nshrunner/config/_seed/: __init__.py
src/nshrunner/configs/: Config_typed_dict.py  __init__.py
src/nshrunner/configs/_config/: Config_typed_dict.py  __init__.py
src/nshrunner/configs/_logging/: __init__.py
src/nshrunner/configs/_runner/: Config_typed_dict.py  PythonLoggingConfig_typed_dict.py  SeedConfig_typed_dict.py  __init__.py
src/nshrunner/configs/_seed/: SeedConfig_typed_dict.py  __init__.py
src/nshrunner/configs/backends/: __init__.py
src/nshrunner/configs/backends/screen/: LoggingConfig_typed_dict.py  ScreenBackendConfig_typed_dict.py  __init__.py
src/nshrunner/configs/backends/slurm/: SlurmBackendConfig_typed_dict.py  SlurmMailConfig_typed_dict.py  SlurmResourcesConfig_typed_dict.py  __init__.py
src/nshrunner/configs/wrapper_fns/: __init__.py
src/nshrunner/picklerunner/: _util.py  create.py  main.py
src/nshrunner/snapshot/: __init__.py  _config.py  _constant.py  _load.py  _resolve_modules.py  _snapshot.py
tests/: test_wrapper_fns.py
