[tool.poetry]
name = "nshrunner"
version = "1.0.11"
description = ""
authors = ["Nima Shoghi <nimashoghi@gmail.com>"]
readme = "README.md"

[tool.poetry.urls]
homepage = "https://github.com/nimashoghi/nshrunner"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "*"
typing-extensions = "*"
cloudpickle = "*"
deepmerge = "*"
nshconfig = "*"
nshutils = "*"
nshsnap = "*"

[tool.poetry.scripts]
nshrunner-picklerunner = "nshrunner.picklerunner.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "*"
ipykernel = "*"
ipywidgets = "*"
pyright = "*"
pysnooper = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateImportUsage = false

[tool.ruff.lint]
select = ["FA102", "FA100"]
ignore = ["F722", "F821", "E731", "E741"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "--cov=src/nshrunner",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
