[project]
name = "nshrunner"
version = "1.3.0"
description = ""
authors = [{ name = "Nima Shoghi", email = "nimashoghi@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "tqdm",
    "typing-extensions",
    "cloudpickle",
    "deepmerge",
    "nshconfig",
    "nshsnap>=0.12",
]

[project.optional-dependencies]
extra = []

[project.urls]
homepage = "https://github.com/nimashoghi/nshrunner"

[project.scripts]
nshrunner-picklerunner = "nshrunner.picklerunner.main:main"

[tool.poetry.group.dev.dependencies]
ruff = "*"
ipykernel = "*"
ipywidgets = "*"
basedpyright = "*"
pysnooper = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.basedpyright]
typeCheckingMode = "standard"
deprecateTypingAliases = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportPrivateImportUsage = false

[tool.ruff.lint]
select = ["FA102", "FA100"]
ignore = ["F722", "F821", "E731", "E741"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    "--cov=src/nshrunner",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
